--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@airstack/airstack-react": "^0.6.2",
     "@rainbow-me/rainbowkit": "1.3.1",
     "autoprefixer": "^10.4.16",
+    "copy-to-clipboard": "^3.3.3",
     "moment": "^2.29.4",
     "next": "^13.4.19",
     "openai": "^4.22.1",
